--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <option value="Diavolone">Diavolone</option>
                 <option value="Pettiparquet">Pettiparquet</option>
                 <option value="Pandamonio">Pandamonio</option>
-                <option value="Conte">Conte</option>
-                <option value="Legia">Legia</option>
+                <option value="Conte">SpaccioUno</option>
+                <option value="Legia">Master</option>
             </select><br><br>
                 
             <label for="nome"><b style="font-size: 20px; line-height: 28px;">Giocatore</b><br>(Cognome e squadra di Serie A)</label><br>
@@ -84,16 +84,16 @@
 
     // Password predefinite per ogni squadra
     const passwords = {
-        "Gonzi": "0001",
-        "Chivas": "0002",
-        "Minturno": "0003",
-        "Califfo": "0004",
-        "BDS": "0005",
-        "Diavolone": "0006",
-        "Pettiparquet": "0007",
-        "Pandamonio": "0008",
-        "Conte": "0009",
-        "Legia": "0010"
+        "Gonzi": "7545",
+        "Chivas": "0184",
+        "Minturno": "6528",
+        "Califfo": "2187",
+        "BDS": "2575",
+        "Diavolone": "1191",
+        "Pettiparquet": "5764",
+        "Pandamonio": "9492",
+        "SpaccioUno": "0604",
+        "Master": "7532"
     };
 
     // Controlla che la password inserita sia corretta
