--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <option value="Diavolone">Diavolone</option>
                 <option value="Pettiparquet">Pettiparquet</option>
                 <option value="Pandamonio">Pandamonio</option>
-                <option value="Conte">SpaccioUno</option>
-                <option value="Legia">Master</option>
+                <option value="SpaccioUno">SpaccioUno</option>
+                <option value="Master">Master</option>
             </select><br><br>
                 
             <label for="nome"><b style="font-size: 20px; line-height: 28px;">Giocatore</b><br>(Cognome e squadra di Serie A)</label><br>
